--- a/src/page-markets.html
+++ b/src/page-markets.html
@@ -15,7 +15,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style include="shared-styles">
      :host {
       display: block;
-      padding: 10px;
     }
 
     .market-list {
@@ -39,7 +38,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     </style>
     <looper-page>
-      <looper-toolbar slot="main-toolbar" active-tab="markets">
+      <looper-toolbar slot="secondary-toolbar" active-tab="markets">
         <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
       </looper-toolbar>
       <div class="sections">
