--- a/src/page-mywallet.html
+++ b/src/page-mywallet.html
@@ -14,12 +14,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style include="shared-styles">
      :host {
       display: block;
-
-      padding: 10px;
     }
     </style>
     <looper-page>
-      <looper-toolbar slot="main-toolbar" active-tab="mywallet">
+      <looper-toolbar slot="secondary-toolbar" active-tab="mywallet">
         <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
       </looper-toolbar>
       <div class="sections">
