--- a/src/page-rings.html
+++ b/src/page-rings.html
@@ -15,13 +15,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <style include="shared-styles">
      :host {
       display: block;
-      padding: 10px;
     }
 
 
     </style>
     <looper-page>
-      <looper-toolbar slot="main-toolbar" active-tab="rings">
+      <looper-toolbar slot="secondary-toolbar" active-tab="rings">
         <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
       </looper-toolbar>
       <div class="sections">
