--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -1,34 +1,44 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <dom-module id="looper-toolbar" fit>
   <template>
-    <style include="shared-styles">
-    <style> :host {
+    <style include="shared-styles"></style>
+    <style include="iron-flex iron-flex-alignment">
+     :host {
       display: block;
     }
 
-    paper-toolbar {
-      /*background-color: grey;*/
+    paper-button {
+      height: 64px;
     }
 
     a[active]>paper-button {
-      background-color: var(--google-blue-500);
+      background-color: var(--google-blue-700);
     }
     </style>
-    <paper-toolbar class="medium-tall">
+    <app-toolbar>
+      <!-- <div class="horizontal layout"> -->
+      <!-- <div class="flex"></div> -->
+      <div condensed-title></div>
+      <a href="#markets" active$="[[isActiveTab('markets')]]" class="styless-link">
+        <paper-button noink>Markets</paper-button>
+      </a>
+      <a href="#mywallet" active$="[[isActiveTab('mywallet')]]" class="styless-link">
+        <paper-button noink>Wallet</paper-button>
+      </a>
+      <a href="#rings" active$="[[isActiveTab('rings')]]" class="styless-link">
+        <paper-button noink>Rings</paper-button>
+      </a>
+      <div condensed-title></div>
+      <!-- <div class="flex"></div> -->
+      <!-- </div> -->
+    </app-toolbar>
+    <!--     <paper-toolbar class="medium-tall">
       <slot slot="top"></slot>
       <span slot="top" class="title">Looper</span>
       <span slot="middle" class="title"></span>
-      <a href="#markets" active$="[[isActiveTab('markets')]]" slot="middle" class="styless-link">
-        <paper-button noink>Markets</paper-button>
-      </a>
-      <a href="#mywallet" active$="[[isActiveTab('mywallet')]]" slot="middle" class="styless-link">
-        <paper-button noink>Wallet</paper-button>
-      </a>
-      <a href="#rings" active$="[[isActiveTab('rings')]]" slot="middle" class="styless-link">
-        <paper-button noink>Rings</paper-button>
-      </a>
+      
       <span slot="middle" class="title"></span>
-    </paper-toolbar>
+    </paper-toolbar> -->
   </template>
   <script>
   class LooperToolbar extends Polymer.Element {
