--- a/src/looper-page/looper-page.html
+++ b/src/looper-page/looper-page.html
@@ -7,8 +7,8 @@
     }
 
     app-header {
-      color: #fff;
-      background-color: var(--google-blue-500);
+/*      color: #fff;
+      background-color: var(--google-blue-500);*/
     }
     </style>
     <app-header-layout has-scrolling-region fullbleed>
