--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -2,7 +2,7 @@
 <dom-module id="looper-toolbar" fit>
   <template>
     <style include="shared-styles"></style>
-    <style include="iron-flex iron-flex-alignment">
+    <style>
      :host {
       display: block;
     }
@@ -11,13 +11,17 @@
       height: 64px;
     }
 
-    a[active]>paper-button {
-      background-color: var(--google-blue-700);
+    app-toolbar {
+      color: #fff;
+      background-color: var(--google-green-500);
     }
+
+    a[active] > paper-button {
+      background-color: var(--google-green-700);
+    }
+
     </style>
     <app-toolbar>
-      <!-- <div class="horizontal layout"> -->
-      <!-- <div class="flex"></div> -->
       <div condensed-title></div>
       <a href="#markets" active$="[[isActiveTab('markets')]]" class="styless-link">
         <paper-button noink>Markets</paper-button>
@@ -29,16 +33,7 @@
         <paper-button noink>Rings</paper-button>
       </a>
       <div condensed-title></div>
-      <!-- <div class="flex"></div> -->
-      <!-- </div> -->
     </app-toolbar>
-    <!--     <paper-toolbar class="medium-tall">
-      <slot slot="top"></slot>
-      <span slot="top" class="title">Looper</span>
-      <span slot="middle" class="title"></span>
-      
-      <span slot="middle" class="title"></span>
-    </paper-toolbar> -->
   </template>
   <script>
   class LooperToolbar extends Polymer.Element {
