--- a/src/page-fill.html
+++ b/src/page-fill.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     </style>
     <looper-page>
-      <simple-toolbar slot="main-toolbar" title="Fill" back-link="#fills"></simple-toolbar>
+      <simple-toolbar slot="secondary-toolbar" title="Fill" back-link="#fills"></simple-toolbar>
       <div class="sections">
         <paper-card heading="Card Title">
           <div class="card-content">Some content</div>
