--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -43,14 +43,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       margin-top: 10px;
     }
 
-    .sections > paper-card {
+    .sections>paper-card {
       width: 100%;
       margin: 10px 0 10px 0;
     }
 
-    paper-icon-button:hover {
+    paper-icon-button {
       /*background-color: blue;*/
-      background-color: var(--google-blue-500);
+      text-transform: none;
     }
 
     paper-button {
