--- a/src/my-app.html
+++ b/src/my-app.html
@@ -107,6 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-header fixed slot="header">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
+            <div spacer></div>
             <div main-title>Looper</div>
           </app-toolbar>
         </app-header>
