--- a/src/page-markets.html
+++ b/src/page-markets.html
@@ -22,14 +22,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       /*--app-grid-item-height: 40px;*/
       --app-grid-gutter: 0px;
     }
-
-  /*  .market-list > .item:first-child {
+    /*  .market-list > .item:first-child {
       @apply --app-grid-expandible-item;
     }*/
 
     .item {
       padding: 10px 5px 10px 5px;
-      border-bottom:solid 1px #eeeeee;
+      border-bottom: solid 1px #eeeeee;
     }
 
     ul {
@@ -59,7 +58,74 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </ul>
           </div>
         </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+         <looper-footer></looper-footer>
       </div>
+
     </looper-page>
   </template>
   <script>
