--- a/src/looper-page/looper-page.html
+++ b/src/looper-page/looper-page.html
@@ -1,25 +1,19 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
-<dom-module id="looper-page" fit>
+<dom-module id="looper-page">
   <template>
-    <style include="shared-styles">
-    <style> :host {
+    <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
+    <style>
+     :host {
       display: block;
     }
+
     </style>
-    <app-drawer-layout fullbleed force-narrow>
-      <app-drawer no-focus-trap slot="drawer">
-        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="markets" href="#markets">View One</a>
-          <a name="mywallet" href="#mywallet">View Two</a>
-        </iron-selector>
-      </app-drawer>
-      <app-header-layout>
-        <app-header reveals effects="waterfall" slot="header">
-          <slot name="main-toolbar"></slot>
-        </app-header>
-        <slot></slot>
-      </app-header-layout>
-    </app-drawer-layout>
+    <app-header-layout has-scrolling-region fullbleed>
+      <app-header slot="header">
+        <slot name="secondary-toolbar"></slot>
+      </app-header>
+      <slot></slot>
+    </app-header-layout>
   </template>
   <script>
   class LooperPage extends Polymer.Element {
