--- a/src/page-markets.html
+++ b/src/page-markets.html
@@ -11,17 +11,33 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 <dom-module id="page-markets">
   <template>
-    <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
+    <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
     <style include="shared-styles">
      :host {
       display: block;
-      padding: 10px;
     }
 
+    .market-list {
+      --app-grid-columns: 3;
+      /*--app-grid-item-height: 40px;*/
+      --app-grid-gutter: 0px;
+    }
+    /*  .market-list > .item:first-child {
+      @apply --app-grid-expandible-item;
+    }*/
 
+    .item {
+      padding: 10px 5px 10px 5px;
+      border-bottom: solid 1px #eeeeee;
+    }
+
+    ul {
+      padding: 0;
+      list-style: none;
+    }
     </style>
     <looper-page>
-      <looper-toolbar slot="main-toolbar" active-tab="markets">
+      <looper-toolbar slot="secondary-toolbar" active-tab="markets">
         <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
       </looper-toolbar>
       <div class="sections">
@@ -30,12 +46,86 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <a href="#market">LRC/ETH</a>
           </div>
         </paper-card>
-        <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
-          <div class="card-actions">
+        <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
           </div>
         </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+
+         <paper-card>
+          <div class="card-content market-list">
+            <ul class="app-grid">
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+              <li class="item">1</li>
+              <li class="item">2</li>
+              <li class="item">3</li>
+            </ul>
+          </div>
+        </paper-card>
+         <looper-footer></looper-footer>
       </div>
+
     </looper-page>
   </template>
   <script>
