--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -30,6 +30,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       font-size: 22px;
     }
 
+    a {
+      color: var(--google-green-500);
+    }
+
+    a:hover {
+      color: var(--google-green-700);
+    }
+
     a.styless-link {
       color: inherit;
       text-decoration: none;
@@ -38,14 +46,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .sections {
       @apply --layout-center;
       @apply --layout-vertical;
+      @apply --layout-flex;
       background-color: #eeeeee;
       width: 100%;
       margin-top: 10px;
+      margin-bottom: 10px;
     }
 
-    .sections > paper-card {
+    .sections>paper-card {
       width: 100%;
       margin: 10px 0 10px 0;
+    }
+
+    paper-icon-button {
+      /*background-color: blue;*/
+      text-transform: none;
     }
 
     paper-button {
