--- a/src/looper-page/simple-toolbar.html
+++ b/src/looper-page/simple-toolbar.html
@@ -2,7 +2,7 @@
 <!-- <link rel="import" href="../../bower_components/paper-button/paper-button.html"> -->
 <dom-module id="simple-toolbar" fit>
   <template>
-    <style include="shared-styles">
+    <style include="shared-styles"></style>
     <style> :host {
       display: block;
     }
@@ -16,10 +16,7 @@
       background-color: var(--google-green-500);
     }
 
-    paper-icon-button:hover {
-      /*background-color: blue;*/
-      background-color: var(--google-green-700);
-    }
+
     </style>
     <app-toolbar>
       <a href="[[backLink]]" class="styless-link">
