--- a/src/page-mywallet.html
+++ b/src/page-mywallet.html
@@ -11,28 +11,209 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 <dom-module id="page-mywallet">
   <template>
+    <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
     <style include="shared-styles">
      :host {
       display: block;
     }
+
+    .card-actions {
+      --app-grid-columns: 5;
+      /*--app-grid-item-height: 40px;*/
+      --app-grid-gutter: 0px;
+    }
+    /*  .market-list > .item:first-child {
+      @apply --app-grid-expandible-item;
+    }*/
+
+    .item {}
+
+    .item>a {
+      padding-right: 16px;
+    }
+
+    .header {
+      background-color: var(--google-grey-100);
+    }
+
+    .header .item {
+      color: var(--google-grey-500);
+    }
+
+    .wallet-summary {
+      padding: 16px 0 16px 0;
+      margin: 16px;
+    }
+
+    .wallet-summary .head {
+      /*min-width: 120px;*/
+      color: var(--google-grey-500);
+    }
+
+    ul {
+      padding: 0;
+      list-style: none;
+    }
     </style>
     <looper-page>
-      <looper-toolbar slot="secondary-toolbar" active-tab="mywallet">
-        <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-      </looper-toolbar>
+      <looper-toolbar slot="secondary-toolbar" active-tab="mywallet"> </looper-toolbar>
       <div class="sections">
-        <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
-          <div class="card-actions">
-            <paper-button>Some action</paper-button>
+        <paper-card transparent>
+          <div class="wallet-summary vertical center layout">
+            <div class="horizontal layout">
+              <!-- <div class="head">Address:</div> -->
+              
+              <div class="address">0xa3ae668B6239fA3eb1dc26DaAbb03f244d0259f0</div>
+            </div>
+            <div class="horizontal layout">
+              <div class="head">Total value:</div>
+              <div class="value">1331321</div>
+            </div>
           </div>
         </paper-card>
-        <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
+        <paper-card>
+          <div class="card-actions header">
+            <ul class="app-grid ">
+              <li class="item">Ether</li>
+              <li class="item">Balance</li>
+              <li class="item">Price (USD)</li>
+              <li class="item">Value (USD)</li>
+              <li class="item">Operations</li>
+            </ul>
+          </div>
           <div class="card-actions">
-            <paper-button>Some action</paper-button>
+            <ul class="app-grid">
+              <li class="item">ETH</li>
+              <li class="item">1291.2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=eth">transfer</a>
+                <a href="#convert">convert</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">WETH</li>
+              <li class="item">2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=weth">transfer</a>
+                <a href="#convert">convert</a>
+              </li>
+            </ul>
           </div>
         </paper-card>
+        <paper-card>
+          <div class="card-actions header">
+            <ul class="app-grid ">
+              <li class="item">Tokens (ERC20)</li>
+              <li class="item">Balance</li>
+              <li class="item">Price (USD)</li>
+              <li class="item">Value (USD)</li>
+              <li class="item">Operations</li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">LRC</li>
+              <li class="item">1291.2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=lrc">transfer</a>
+                <a href="#market?token=lrc">trade</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">LRC</li>
+              <li class="item">1291.2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=lrc">transfer</a>
+                <a href="#market?token=lrc">trade</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">LRC</li>
+              <li class="item">1291.2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=lrc">transfer</a>
+                <a href="#market?token=lrc">trade</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">LRC</li>
+              <li class="item">1291.2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=lrc">transfer</a>
+                <a href="#market?token=lrc">trade</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">LRC</li>
+              <li class="item">1291.2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=lrc">transfer</a>
+                <a href="#market?token=lrc">trade</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">LRC</li>
+              <li class="item">1291.2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=lrc">transfer</a>
+                <a href="#market?token=lrc">trade</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">LRC</li>
+              <li class="item">1291.2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=lrc">transfer</a>
+                <a href="#market?token=lrc">trade</a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-actions">
+            <ul class="app-grid">
+              <li class="item">ZXT</li>
+              <li class="item">2121</li>
+              <li class="item">2001.12</li>
+              <li class="item">200121.12</li>
+              <li class="item">
+                <a href="#transfer?token=zxt">transfer</a>
+                <a href="#market?token=zxt">trade</a>
+              </li>
+            </ul>
+          </div>
+        </paper-card>
+        <looper-footer></looper-footer>
       </div>
     </looper-page>
   </template>
