--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -24,13 +24,13 @@
     </style>
     <app-toolbar>
       <div condensed-title></div>
-      <a href="#markets" active$="[[isActiveTab('markets')]]" class="styless-link">
+      <a href="#/markets" active$="[[isActiveTab('markets')]]" styleless>
         <paper-button noink>Markets</paper-button>
       </a>
-      <a href="#mywallet" active$="[[isActiveTab('mywallet')]]" class="styless-link">
+      <a href="#/wallet" active$="[[isActiveTab('wallet')]]" styleless>
         <paper-button noink>Wallet</paper-button>
       </a>
-      <a href="#rings" active$="[[isActiveTab('rings')]]" class="styless-link">
+      <a href="#/rings" active$="[[isActiveTab('rings')]]" styleless>
         <paper-button noink>Rings</paper-button>
       </a>
       <div condensed-title></div>
