--- a/src/page-markets.html
+++ b/src/page-markets.html
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="sections">
         <paper-card heading="Card Title">
           <div class="card-content">
-            <a href="#market">LRC/ETH</a>
+            <a href="#/market/lrc-eth">LRC/ETH</a>
           </div>
         </paper-card>
         <paper-card>
