--- a/src/page-orders.html
+++ b/src/page-orders.html
@@ -17,11 +17,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     </style>
     <looper-page>
-      <simple-toolbar slot="secondary-toolbar" title="Orders" back-link="#markets"></simple-toolbar>
+      <simple-toolbar slot="secondary-toolbar" title="Orders" back-link="#/markets"></simple-toolbar>
       <div class="sections">
         <paper-card heading="Card Title">
           <div class="card-content">
-            <a href="#order">order 1</a>
+            <a href="#/order">order 1</a>
           </div>
         </paper-card>
         <paper-card heading="Card Title">
