--- a/src/page-rings.html
+++ b/src/page-rings.html
@@ -26,7 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="sections">
         <paper-card >
           <div class="card-content">
-            <a href="#ring">Link to a Ring</a>
+            <a href="#/ring">Link to a Ring</a>
           </div>
         </paper-card>
       </div>
