--- a/src/page-wallet-default.html
+++ b/src/page-wallet-default.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
-<dom-module id="page-mywallet-default" fit>
+<dom-module id="page-wallet-default" fit>
   <template>
     <style include="shared-styles"></style>
     <style> :host {
@@ -11,7 +11,7 @@
   </template>
   <script>
   class PageMyWalletDefault extends Polymer.Element {
-    static get is() { return 'page-mywallet-default'; }
+    static get is() { return 'page-wallet-default'; }
 
     static get properties() {
       return {
