--- a/src/looper-page/simple-toolbar.html
+++ b/src/looper-page/simple-toolbar.html
@@ -3,7 +3,8 @@
 <dom-module id="simple-toolbar" fit>
   <template>
     <style include="shared-styles"></style>
-    <style> :host {
+    <style>
+     :host {
       display: block;
     }
 
@@ -16,14 +17,13 @@
       background-color: var(--google-green-500);
     }
 
-
     </style>
     <app-toolbar>
       <a href="[[backLink]]" class="styless-link">
         <paper-icon-button icon='arrow-back' noink></paper-icon-button>
       </a>
       <div spacer></div>
-      <div condensed-title>[[title]]</div>
+      <div condensed-title>[[title]][[formatId()]]</div>
     </app-toolbar>
   </template>
   <script>
@@ -36,11 +36,15 @@
           type: String,
           // reflectToAttribute: true
         },
-        title: {
-          type: String
-          // reflectToAttribute: true
-        }
+        title: String,
+        id: String
       };
+
+
+    }
+    formatId() {
+      if (this.id) return (" / " + this.id);
+      else return "";
     }
   }
 
