--- a/src/page-convert.html
+++ b/src/page-convert.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     </style>
     <looper-page>
-      <simple-toolbar slot="secondary-toolbar" title="Ether ERC20 Conversion" back-link="#wallets"></simple-toolbar>
+      <simple-toolbar slot="secondary-toolbar" title="Ether ERC20 Conversion" back-link="#/wallet"></simple-toolbar>
       <div class="sections">
         <paper-card heading="Card Title">
           <div class="card-content">Some content</div>
