--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -26,7 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color: var(--google-green-700);
     }
 
-    a.styless-link {
+    a[styleless] {
       color: inherit;
       text-decoration: none;
     }
