--- a/src/page-transfer.html
+++ b/src/page-transfer.html
@@ -11,34 +11,172 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 <dom-module id="page-transfer">
   <template>
+    <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
     <style include="shared-styles">
      :host {
       display: block;
-    }
+     }
+     .container {
+       @apply(--layout-horizontal);
+       @apply(--layout-center-justified);
+       margin: 50px;
+       #padding: 50px;
+       #width: 800px;
+     }
+     .flexleft {
+       @apply(--layout-vertical);
+       @apply(--layout-flex-3);
+       width:300px;
+       #background-color:mediumvioletred;
+     }
+     .flexright {
+       @apply(--layout-vertical);
+       @apply(--layout-flex-2);
+       width:200px;
+       padding-left: 40px;
+       #background-color:#b0e0e6;
+     }
+     .flexleft .line {
+       @apply(--layout-flex);
+     }
+     .fontTitle {
+       font-family: Georgia, serif;
+       font-size:1.2em;
+     }
+     .fontContent {
+       font-family: Georgia, serif;
+       font-size:0.875em;
+     }
+     iron-list {
+        flex: 1 1 auto;
+     }
+     .hidden {
+       display: none;
+     }
+     iron-input > input {
+       width: 350px;
+     }
+     iron-input > .amount {
+       width: 150px;
+     }
+     iron-input[invalid] > input {
+       border: 1px solid red;
+       background-color: #FFCDD2;
+     }
+     paper-button {
+       font-family: 'Roboto', 'Noto', sans-serif;
+       font-weight: normal;
+       font-size: 20px;
+       -webkit-font-smoothing: antialiased;
+     }
+     .line paper-button {
+       margin-top: 20px;
+     }
+
     </style>
     <looper-page>
       <simple-toolbar slot="secondary-toolbar" title="Transfer" back-link="#/wallet"></simple-toolbar>
-      <div class="sections">
-        <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
-          <div class="card-actions">
-            <paper-button>Some action</paper-button>
+
+      <div class="container">
+
+        <div class="flexleft">
+          <div class="line">
+            Send To:
           </div>
-        </paper-card>
-        <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
-          <div class="card-actions">
-            <paper-button>Some action</paper-button>
+          <div class="line">
+            <iron-input bind-value="{{bindValue}}">
+              <input value="{{value::input}}">
+            </iron-input>
           </div>
-        </paper-card>
+          <div class="line">
+            Amount to Send:
+          </div>
+          <div class="line">
+            <iron-input bind-value="{{bindValue}}">
+              <input value="{{value::input}}" class="amount">
+            </iron-input>
+            <paper-dropdown-menu label="Tokens">
+              <paper-listbox slot="dropdown-content" selected="0">
+                <paper-item>LRC</paper-item>
+                <paper-item>EOS</paper-item>
+              </paper-listbox>
+            </paper-dropdown-menu>
+          </div>
+          <div class="line">
+            Gas Limit:
+          </div>
+          <div class="line">
+            <iron-input bind-value="{{bindValue}}">
+              <input value="{{value::input}}">
+            </iron-input>
+          </div>
+
+          <div class="line">
+            <a on-click="handleClick">+Advanced: Add Data</a>
+          </div>
+          <div class="hidden" id="hiddenExtData">
+            <div class="line">
+              Data:
+            </div>
+            <div class="line">
+              <iron-input bind-value="{{bindValue}}">
+                <input value="{{value::input}}">
+              </iron-input>
+            </div>
+          </div>
+
+          <div class="line">
+            <paper-button>Send Transaction</paper-button>
+          </div>
+
+        </div>
+
+        <div class="flexright">
+          <div class="line fontTitle">
+            Account Address:
+          </div>
+          <div class="line fontContent">
+            0xd736Fa4EcC72e84fE482B1673E8081ed8C39C94c
+          </div>
+          <div class="line fontTitle">
+            Account Balance:
+          </div>
+          <div class="line fontContent">
+            0 ETH
+          </div>
+          <div class="line">
+            <hr>
+          </div>
+          <div class="line fontTitle">
+            Token Balances:
+          </div>
+          <div class="line">
+            <iron-ajax url="http://127.0.0.1:8081/testData-tokens.json" last-response="{{data}}" auto></iron-ajax>
+            <iron-list items="[[data]]" as="item">
+              <template>
+                <div class="fontContent">
+                  [[item.symbol]] [[item.balance]]
+                </div>
+              </template>
+            </iron-list>
+          </div>
+        </div>
+
       </div>
     </looper-page>
   </template>
   <script>
   class PageTransfer extends Polymer.Element {
     static get is() { return 'page-transfer'; }
+    handleClick() {
+       var extData = this.$.hiddenExtData;
+       if(extData.style.display=='block'){
+          extData.style.display='none';
+       }else{
+          extData.style.display='block';
+       }
+    }
   }
-
   window.customElements.define(PageTransfer.is, PageTransfer);
   </script>
 </dom-module>
