--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -16,13 +16,18 @@
       background-color: var(--google-green-500);
     }
 
-    a[active] > paper-button {
+    app-toolbar[active="settings"] {
+      background-color: var(--google-grey-500);
+    }
+
+    a[active]>paper-button {
       background-color: var(--google-green-700);
     }
 
-
+    p
     </style>
-    <app-toolbar>
+    <app-toolbar active="[[activeTab]]">
+      <paper-icon-button disabled noink></paper-icon-button>
       <div condensed-title></div>
       <a href="#/markets" active$="[[isActiveTab('markets')]]" styleless>
         <paper-button noink>Markets</paper-button>
@@ -34,6 +39,9 @@
         <paper-button noink>Rings</paper-button>
       </a>
       <div condensed-title></div>
+      <a styleless href="#/settings">
+        <paper-icon-button noink icon="settings"></paper-icon-button>
+      </a>
     </app-toolbar>
   </template>
   <script>
