--- a/src/page-wallet-generate.html
+++ b/src/page-wallet-generate.html
@@ -1,21 +1,123 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <dom-module id="page-wallet-generate" fit>
   <template>
-    <style include="shared-styles"></style>
-    <style> :host {
+    <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
+    <style include="shared-styles">
+     :host {
       display: block;
+      --paper-card-actions: {
+        background-color: var(--paper-grey-50);
+      }
+      --paper-card-header-text: {
+        font-size: 18px;
+        color: rgba(0, 0, 0, .54);
+      }
     }
 
+    .input-wrapper {
+      padding-top: 24px;
+      padding-bottom: 24px;
+    }
+
+    iron-input input {
+      height: 36px;
+      width: 400px;
+    }
+
+    #visibleBtn {
+      height: 39px;
+      width: 39px;
+      background-color: var(--google-grey-300);
+    }
+
+
+    .card-actions {
+      text-align: center;
+    }
+
+    .card-actions paper-button {
+      min-width: 360px;
+      /*margin:8px 0 8px 0;*/
+      /*color: var(--paper-green-700);*/
+    }
+
+    .card-actions paper-button:hover {
+      color: var(--paper-green-700);
+    }
+
+    .warning iron-icon {
+      height: 18px;
+      margin-bottom: 5px;
+      color: var(--paper-amber-700);
+    }
+
+
+    strong {
+      color: var(--paper-green-700);
+      padding-right: 8px;
+    }
     </style>
-    generate
+    <div class="sections">
+      <paper-card heading="Generate Ethereum Walelt">
+        <div class="card-content">
+          <div class="vertical center layout ">
+            <div secondary-text> Provide a very strong password:</div>
+            <div class="input-wrapper horizontal layout center-justified">
+              <iron-input bind-value="{{password}}" auto-validate>
+                <input type="password">
+              </iron-input>
+              <paper-icon-button id="visibleBtn" on-click="toggleVisible" icon="visibility"></paper-icon-button>
+            </div>
+          </div>
+        </div>
+        <div class="card-actions">
+          <paper-button on-click="unlockClicked">Generate</paper-button>
+        </div>
+      </paper-card>
+      <paper-card heading="Save Keystore File">
+        <div class="card-content">
+          <div class="vertical center layout ">
+            <div class="vertical layout warning" secondary-text>
+              <div>
+                <iron-icon icon="warning"></iron-icon><strong>Do not lose it!</strong> It cannot be recovered if you lose it.</div>
+              <div>
+                <iron-icon icon="warning"></iron-icon><strong>Do not share it!</strong> Your funds will be stolen if you use this file on a malicious/phishing site.</div>
+              <div>
+                <iron-icon icon="warning"></iron-icon><strong>Make a backup!</strong> Secure it like the millions of dollars it may one day be worth.</div>
+            </div>
+            <div class="input-wrapper horizontal layout center-justified">
+              <paper-button primary on-click="downloadKeystore" id="downloadButton">
+                <iron-icon icon="file-download"></iron-icon>Download Keystore File</paper-button>
+            </div>
+          </div>
+        </div>
+        <div class="card-actions">
+          <paper-button id="proceedButton" on-click="proceedClicked">I saved my keystore file. Proceed to unlock my wallet.</paper-button>
+        </div>
+      </paper-card>
+      <!--       <paper-card transparent>
+        <div class="horiziontal center layout">
+          <div class="flex or">Generate Ethereum Wallet</div>
+        </div>
+      </paper-card> -->
+    </div>
   </template>
   <script>
   class PageMyWalletGenerate extends Polymer.Element {
     static get is() { return 'page-wallet-generate'; }
 
     static get properties() {
-      return {
-      };
+      return {};
+    }
+
+    toggleVisible() {
+      this.$.visibleBtn.icon = "visibility-off";
+    }
+
+
+    proceedClicked() {
+      this.password = "";
+      this.dispatchEvent(new CustomEvent('reset-wallet', { bubbles: true, composed: true }));
     }
   }
 
