--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -31,6 +31,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       text-decoration: none;
     }
 
+    div[secondary-text] {
+      color: rgba(0, 0, 0, 0.78);
+    }
+
     .sections {
       @apply --layout-center;
       @apply --layout-vertical;
@@ -39,6 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       width: 100%;
       margin-top: 10px;
       margin-bottom: 10px;
+      min-height: 80vh;
     }
 
     .sections>paper-card {
@@ -50,12 +55,45 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       background-color: transparent;
     }
 
+    iron-input input {
+      height: 28px;
+      font-size: 16px;
+      outline: none;
+      border: solid 1px var(--paper-grey-300);
+      -webkit-appearance: none;
+      padding: 0 8px 1px 8px;
+    }
+
+
+    iron-input input:focus {
+      padding-bottom: 0;
+      border-bottom: solid 2px var(--paper-green-500);
+    }
+
+
     paper-icon-button {
       text-transform: none;
     }
 
     paper-icon-button:hover {
       background-color: rgba(0, 0, 0, .1);
+    }
+
+    paper-icon-button[disabled]:hover {
+      background-color: transparent;
+    }
+
+    paper-button[uppercase] {
+      text-transform: uppercase;
+    }
+
+    paper-button[primary] {
+      background-color: var(--google-green-500);
+      color: white;
+    }
+
+    paper-button[primary]:hover {
+      background-color: var(--google-green-700);
     }
 
     paper-button {
